--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Quiz</string>
     <string name="action_settings">Settings</string>
     <string name="quiz_app">Quiz App</string>
     <string name="quiz_1">1.What is Deoxyribonucleic acid commonly referred to as ?</string>
@@ -34,4 +34,6 @@
     <string name="aswer_9_2">Stalagmites</string>
     <string name="quiz_10">10.What process involves heating an ore to obtain a metal ?</string>
     <string name="aswer_10">Smelting</string>
+    <string name="firstName">First Name</string>
+    <string name="lastName">Last Name</string>
 </resources>
